--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.3",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-background-actions": "^4.0.1",
