--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "colorWheel.settings.workspaceColor": "hsl(86,50%,20%)"
+    "colorWheel.settings.workspaceColor": "hsl(86,50%,20%)",
+    "java.compile.nullAnalysis.mode": "disabled"
 }
