--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-background-actions": "^4.0.1",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-radio-buttons-group": "^3.1.0",
@@ -31,7 +32,9 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-svg": "^15.5.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-vision-camera": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
